Update the index.html to allow a user to claim a star and to search for a star by token id.

--- a/project 5/style.css
+++ b/project 5/style.css
@@ -13,6 +13,19 @@ body {
 .row {
     margin-bottom:10px;
 }
+label {
+    width: 150px;
+    display: inline-block;
+}
+.left {
+    float: left;
+    margin-right: 200px;
+}
+#error {
+    width: 100%;
+    color: red;
+    font-weight: bolder;
+}
 button {
     margin: 2em 0;
     padding: 1em 4em;
